Fixed list item overflow for media selection and media queue views

--- a/webinosTV/src/sass/style-tv.scss
+++ b/webinosTV/src/sass/style-tv.scss
@@ -507,7 +507,12 @@ $headerHeight: 8em;
         margin-bottom: 1em;
         font-size: 1.5em;
         line-height: 1.5em;
+        width: 100%;
         .itemcontainer {
+          width: 100%;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           @include tv-checkboxes;
 
           div {
@@ -680,7 +685,7 @@ $headerHeight: 8em;
   }
 
   #mobilequeuewrapper {
-    height: 73%;
+    height: 66%;
     ul {
       padding-left: 0;
       list-style-type: none;
@@ -695,8 +700,13 @@ $headerHeight: 8em;
         margin-bottom: 1em;
         font-size: 1.5em;
         line-height: 1.5em;
+        width: 100%;
 
         .itemcontainer {
+          width: 100%;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
           @include tv-checkboxes;
 
           div {
